--- a/tutoring/core/templates/core/base.html
+++ b/tutoring/core/templates/core/base.html
@@ -169,14 +169,13 @@
     <div class="container my-5" style="padding-top: 80px;">
         {% block content %}{% endblock %}
 <!-- Privacy Policy Modal -->
-<div class="modal" id="privacyPolicyModal" tabindex="-1" aria-labelledby="privacyPolicyModalLabel" aria-hidden="true">
+<!-- Privacy Policy Modal -->
+<div class="modal fade" id="privacyPolicyModal" tabindex="-1" aria-labelledby="privacyPolicyModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="privacyPolicyModalLabel">Privacy Policy</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <p>Your privacy is important to us. It is our policy to respect your privacy regarding any information we may collect from you across our website, and other sites we own and operate.</p>
@@ -196,14 +195,13 @@
 </div>
 
 <!-- Terms of Conditions Modal -->
-<div class="modal" id="termsConditionsModal" tabindex="-1" aria-labelledby="termsConditionsModalLabel" aria-hidden="true">
+<!-- Terms of Conditions Modal -->
+<div class="modal fade" id="termsConditionsModal" tabindex="-1" aria-labelledby="termsConditionsModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="termsConditionsModalLabel">Terms and Conditions</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <p>Welcome to North Wales Tutoring!</p>
@@ -296,10 +294,11 @@
                 </div>
 <div class="col-12">
 <!-- Trigger for Privacy Policy Modal -->
-<a href="#" data-toggle="modal" data-target="#privacyPolicyModal">Privacy Policy</a>
+<!-- Privacy Policy Modal Trigger -->
+<a href="#" data-bs-toggle="modal" data-bs-target="#privacyPolicyModal">Privacy Policy</a>
 
-<!-- Trigger for Terms of Conditions Modal -->
-<a href="#" data-toggle="modal" data-target="#termsConditionsModal">Terms of Service</a>
+<!-- Terms of Conditions Modal Trigger -->
+<a href="#" data-bs-toggle="modal" data-bs-target="#termsConditionsModal">Terms of Service</a>
             </div>
             <div class="text-center mt-3">
 <a href="https://cleandesignuk.com/" target="_blank" class="btn btn-custom">Website by Clean Design UK</a>
@@ -309,9 +308,7 @@
         </div>
     </footer>
     <!-- Bootstrap JS and its dependencies -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     {% block extra_js %}{% endblock %}
 </body>
 </html>
